# obstacles_trajectory_predictor

./: CMakeLists.txt  README.md  package.xml
include/obstacles_trajectory_predictor/: kf.h  obstacle.h  obstacles_tracker.h  obstacles_trajectory_predictor.h  social_force_model.h
src/: demo.cpp  kf.cpp  obstacle.cpp  obstacles_tracker.cpp  obstacles_trajectory_predictor.cpp  social_force_model.cpp
test/: obstacles_trajectory_predictor.test  obstacles_trajectory_predictor_test.cpp
